in about page for heading

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 <body>
 
     <h1>About Tea Time</h1>
-
+	<h1>this is the heading section</h1>
     <p><strong>Tea Time</strong> was founded with a simple idea: to bring people together through the warmth of tea. We believe that every cup tells a story — of tradition, health, and connection.</p>
 
     <h2>Our Mission</h2>
