--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Tea Page</title>
 </head>
 <body>
-
+	<h1>wooww</h1>
     <h1>Welcome to the World of Tea</h1>
     <p>Explore different types of tea and their unique flavors.</p>
     <p>this is for teeeeeeee</p>
@@ -25,13 +25,13 @@
         <li>Steep for the recommended time.</li>
         <li>Enjoy without rushing!</li>
     </ol>
-
+	<h2>erererere</h2>
     <h2>Contact</h2>
     <p>For tea suggestions or feedback, email us at <a href="mailto:info@teatime.com">info@teatime.com</a>.</p>
 
     <hr>
     <p>&copy; 2025 Tea Time</p>
-
+	<p>gfgfgffg</p>
 </body>
 </html>
 
